tests/neg/i2494.scala
enum   // error: cyclic reference
object // error // error
